Prevent inline overflow.

--- a/src/layers/Visuals/Visuals.css
+++ b/src/layers/Visuals/Visuals.css
@@ -1,4 +1,5 @@
 .Visuals canvas {
+    display: block;
     height: 100%;
     width: 100%;
 }
